# blueprint

./: ARCHITECTURE.md  Cargo.toml  README.md
benches/: blueprint_bench.rs
bp/tests/: test_match.bp
crates/approval/: Cargo.toml
crates/approval/src/: action.rs  interactive.rs  lib.rs  policy.rs  preflight.rs
crates/blueprint-engine-core/: Cargo.toml
crates/blueprint-engine-core/src/: lib.rs  validation.rs
crates/blueprint-engine-eval/: Cargo.toml
crates/blueprint-engine-eval/src/: checker.rs  eval.rs  scope.rs
crates/blueprint-engine-eval/src/eval/: expr.rs  mod.rs
crates/blueprint-engine-eval/src/natives/: approval.rs  builtins.rs  crypto.rs  file.rs  http.rs  json.rs  jwt.rs  mod.rs  parallel.rs  process.rs  random.rs  redact.rs  regex.rs  registry.rs  socket.rs  task.rs  time.rs  triggers.rs  websocket.rs
crates/blueprint-engine-eval/src/natives/builtins/: types.rs
crates/blueprint-engine-parser/: Cargo.toml
crates/blueprint-engine-parser/src/: lib.rs
crates/blueprint_cli/: Cargo.toml
crates/blueprint_cli/src/: callgraph.rs  main.rs  runner.rs  workspace.rs
crates/blueprint_cli/src/callgraph/: builder.rs  graph.rs  mod.rs  types.rs
crates/blueprint_core/src/: error.rs  lib.rs  package.rs
crates/blueprint_eval/src/: checker.rs  eval.rs  scope.rs
crates/blueprint_eval/src/natives/: agent.rs  builtins.rs  http.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: compiled.rs  context.rs  error.rs  lib.rs  op.rs  plan.rs  schema.rs
crates/generator/: Cargo.toml
crates/generator/src/: generator.rs  lib.rs  optimizer.rs  resolver.rs  validator.rs
crates/generator/src/starlark/: builtins.rs  generator.rs  mod.rs  scope.rs  value.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: cache.rs  eval.rs  executor.rs  lib.rs  resolver.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  manager.rs  repository.rs
crates/storage/src/entities/: approval.rs  mod.rs  op.rs  op_result.rs  plan.rs
examples/: async_sleep.star  data_transform.star  fibonacci.star  file_operations.star  graph_bfs.star  hello.star  http_request.star  json_processing.star  lazy_test.bp  parallel.star  parallel_io.star  policy.toml  print_schema.rs  sequential.star  shell_command.star  simple_io.star  sleep.star  sorting.star
examples/concurrent/: worker1.star  worker2.star  worker3.star  worker4.star  worker5.star
examples/modules/: alias.star  main.star  nested.star
examples/modules/lib/: advanced.star  math.star  utils.star
examples/modules/subdir/: from_parent.star
src/: lib.rs  main.rs
stdlib/: automation.bp  aws.bp  banking.bp  bp.star  communication.bp  crm.bp  devtools.bp  ecommerce.bp  encoding.bp  exec.star  gcp.bp  hr.bp  http.star  io.star  json.star  llm.bp  observability.bp  ops.star  parallel.star  payments.bp  pm.bp  productivity.bp  redis.bp  search.bp  social.bp  stream.star  tcp.star  udp.star  unix.star  util.star  uuid.bp  vectordb.bp
tests/: blueprint_spec.rs  lib_example.bp  test_import.bp  test_list_methods.bp  test_struct.bp
