[package]
name = "blueprint3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance Starlark script executor with implicit async I/O"

[[bin]]
name = "bp"
path = "src/main.rs"

[dependencies]
blueprint-engine-core.workspace = true
blueprint-engine-parser.workspace = true
blueprint-engine-eval.workspace = true
tokio.workspace = true
clap.workspace = true
glob.workspace = true
axum.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
rustyline = "15"
