[package]
name = "blueprint_common"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
indexmap.workspace = true
sha2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
allocative.workspace = true
allocative_derive.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
