[package]
name = "blueprint_interpreter"
version.workspace = true
edition.workspace = true

[dependencies]
blueprint_common.workspace = true
blueprint_generator.workspace = true

serde.workspace = true
serde_json.workspace = true
moka.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
reqwest.workspace = true
tokio.workspace = true
